Changed background images, fixed background error.
Known error: Second background still not properly positioned for all screen sizes.

--- a/website.html
+++ b/website.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
 
-  body, html {
+  body {
     background-image: url("bg3.png"), url("bg2.png"), url("bg1.png");
     background-attachment: scroll, fixed, scroll;
-    background-position: center, -20px 185px, center;
+    background-position: 60%, 90% 40%, 60%;
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size:cover,120%,cover;
     
   }
 
