--- a/website.html
+++ b/website.html
@@ -9,11 +9,12 @@
   <style>
 
   body {
-    background-image: url("bg3.png"), url("bg2.png"), url("bg1.png");
+    background-image: url("bg31.png"), url("bg21.png"), url("bg11.png");
+    position: relative, absolute, relative;
     background-attachment: scroll, fixed, scroll;
-    background-position: 60%, 90% 40%, 60%;
+    background-position: 60%, 25% 120px, 60%;
     background-repeat: no-repeat;
-    background-size:cover,120%,cover;
+    background-size:cover;
     
   }
 
@@ -28,8 +29,9 @@
     font-size: 150px;
     position: static;
     color: white;
-    margin: auto;
-
+    text-shadow: 0px 0px 70px white;
+    margin: 0 100px 0 0;
+    width: auto;
   }
   </style>
 </head>
@@ -40,42 +42,63 @@
 <div class="heroo">
 <p>HELLO</p>
 </div>
-<!-- First Container -->
-<div id= "Joker" class="container-fluid bg-1 text-center"></div>
 
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h2 class="margin">Why So Serious?</h2>
-  <p>Don't make us laugh. The green hair. The crazed smile. The maniacal cackle. You know exactly who he is and how far he'd go to put a smile on your face.</p>
-</div>
+<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 
-<!-- Third Container-->
-<div id= "Batman" class="container-fluid bg-3 text-center"></div>
-<!-- Fourth Container -->
-<div class="container-fluid bg-4 text-center">
-        <h2 class="margin">The Dark Knight</h2>
-        <p>Dark Knight. Caped Crusader. World’s Greatest Detective. Whatever you know him as, wherever you know him from—the blockbuster movies, TV shows, video games, cartoons, or millions of comics—Batman is proof you don’t need superpowers to be a superhero… and the poster boy for what a bad childhood can do to you.</p>
-      </div>
-<!-- Fifth Container -->
-<div id="Creater" class="container-fluid bg-5 text-center">
-      </div>
-<!-- Sixth Container -->
-<div class="container-fluid bg-6 text-center">
-    <img src="13.jpg" id="img1" class="img-responsive img-circle margin" style="display:inline" alt="Vishal" width="250" height="250">
-    <div><h2>Vishal Miglani</h2>
-      <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
-          "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
-          </p>
-    </div>  
-  </div>
-<footer class="container-fluid bg-9 text-center" style="padding-top: 20px; padding-bottom : 0px;">
-  <p>Designed by Vishal</p>
-      <ul class="list-inline">            
-          <li class="list-inline-item" style="margin:10px;"><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-          <li class="list-inline-item" style="margin:10px;"><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-          <li class="list-inline-item" style="margin:10px;"><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>             
-          <li class="list-inline-item" style="margin:10px;"><a href="#"><i class="fa fa-google-plus fa-2x"></i></a></li>             
-      </ul>
-</footer>
 </body>
 </html>
